tests/neg-macros/i19676/Test_2.scala
//> using options -experimental

@buggy // error
case class Foo()